ui: dep: introduce libsdl4j as render library