@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'app.pairs'
@@ -10,13 +9,13 @@ repositories {
     mavenCentral()
 }
 
-javafx {
-    version = "21.0.2"
-    modules = [ 'javafx.controls', 'javafx.graphics' ]
+dependencies {
+    implementation("io.github.libsdl4j:libsdl4j:2.28.4-1.6")
 }
 
 application {
-    mainClass = 'app.pairs.Main'
+	mainClass = 'app.pairs.Main'
+	//applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
 
 tasks.withType(JavaCompile).configureEach {
